--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "prettier": "^3.6.1"
+    "prettier": "^3.6.1",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
