--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/cli": "^4.1.10",
     "core-js": "^3.8.3",
     "pinia": "^3.0.3",
