--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,9 @@ POSTGRES_PASSWORD=
 POSTGRES_DB=stockshowdown
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+BACKEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:8080
