--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: ./frontend
     ports:
       - "5173:80"
+    env_file:
+      - ./frontend/.env
     depends_on:
       - backend
 
