--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.10",
     "core-js": "^3.8.3",
     "pinia": "^3.0.3",
-    "tailwindcss": "^4.1.10",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -24,11 +22,14 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.6",
     "prettier": "^2.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "~4.5.5"
   }
 }
