Update backend env example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,10 +8,13 @@ POSTGRES_DB=stockshowdown
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
+STRIPE_SECRET_KEY=
+PRICE_ID=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 BACKEND_URL=http://localhost:3000
-FRONTEND_URL=http://localhost:8080
+FRONTEND_URL=http://localhost:5173
 
 NODE_ENV=development
