--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.2",
+    "pinia": "^3.0.3",
     "prettier": "^3.6.1",
     "sequelize": "^6.37.7"
   },
