--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^7.4.0",
+    "axios": "^1.10.0",
     "core-js": "^3.8.3",
     "pinia": "^3.0.3",
     "vue": "^3.2.13",
