--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,9 +15,14 @@ services:
       - backend
 
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
     env_file:
       - ./backend/.env
     depends_on:
