--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:20
 WORKDIR /app
+
+RUN apt-get update && \
+    apt-get install -y python3 python3-pip python3-psycopg2
+
 COPY package*.json ./
 RUN npm install
 COPY . .
