--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -3,5 +3,9 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+
+RUN apt-get update && \
+    apt-get install -y python3 python3-pip python3-psycopg2
+    
 EXPOSE 3000
 CMD ["npm", "run", "dev"]
