--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
-    "docker:prod": "docker-compose up --build -d",
+    "docker:dev": "docker compose -f docker-compose.dev.yml build --no-cache && docker compose -f docker-compose.dev.yml up",
+    "docker:prod": "docker compose build --no-cache && docker compose up -d",
     "docker:down": "docker-compose down"
   }
 }
