--- a/backend/package.json
+++ b/backend/package.json
@@ -21,11 +21,12 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
-    "stripe": "^18.2.1",
     "pg": "^8.16.2",
     "pinia": "^3.0.3",
     "prettier": "^3.6.1",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
