--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.10.0",
     "core-js": "^3.8.3",
     "pinia": "^3.0.3",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
