Update oauth verify check

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "google-auth-library": "^10.2.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.2",
     "pinia": "^3.0.3",
