--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,22 @@
 services:
+  caddy:
+    image: caddy:2-alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      - frontend
+      - backend
+    restart: unless-stopped
+
   frontend:
     build: ./frontend
-    ports:
-      - "5173:80"
+    expose:
+      - "80"
     env_file:
       - ./frontend/.env
     depends_on:
@@ -10,8 +24,8 @@ services:
 
   backend:
     build: ./backend
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     env_file:
       - ./backend/.env
     depends_on:
@@ -47,3 +61,5 @@ services:
 
 volumes:
   pgdata:
+  caddy_data:
+  caddy_config:
